# C2-Explorer

./: README.md  index.html
src/: .gitignore
src/MARSIM/: README.md
src/MARSIM/Utils/odom_visualization/src/: odom_visualization.cpp
src/MARSIM/Utils/waypoint_generator/src/: waypoint_generator.cpp
src/MARSIM/cascadePID/include/: cascadePID.hpp
src/MARSIM/local_sensing/include/: opengl_sim.hpp
src/MARSIM/local_sensing/src/: pcl_depth.cpp  pointcloud_render_node.cpp
src/MARSIM/map_generator/resource/: cubicle_office.pcd  octa_maze.pcd
src/MARSIM/map_generator/src/: map_publisher.cpp
src/swarm_exploration/active_perception/: CMakeLists.txt
src/swarm_exploration/active_perception/include/active_perception/: connectivity_graph.h  frontier_finder.h  graph_node.h  heading_planner.h  hgrid.h  perception_utils.h  traj_visibility.h  uniform_grid.h
src/swarm_exploration/active_perception/src/: connectivity_graph.cpp  frontier_finder.cpp  graph_node.cpp  heading_planner.cpp  hgrid.cpp  perception_utils.cpp  uniform_grid.cpp
src/swarm_exploration/bspline/: CMakeLists.txt  package.xml
src/swarm_exploration/bspline/include/bspline/: non_uniform_bspline.h
src/swarm_exploration/bspline/src/: non_uniform_bspline.cpp
src/swarm_exploration/bspline_opt/: CMakeLists.txt  package.xml
src/swarm_exploration/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/swarm_exploration/bspline_opt/src/: bspline_optimizer.cpp
src/swarm_exploration/exploration_manager/: CMakeLists.txt  package.xml
src/swarm_exploration/exploration_manager/config/: swarm.rviz
src/swarm_exploration/exploration_manager/config/maps/: cubicle_office.yaml  octa_maze.yaml  open_plan_office.yaml
src/swarm_exploration/exploration_manager/include/exploration_manager/: c2_exploration_fsm.h  c2_exploration_manager.h  expl_data.h
src/swarm_exploration/exploration_manager/launch/: cubicle_office.launch  octa_maze.launch  open_plan_office.launch  real_outdoor_exploration.xml  real_outdoor_planner.xml  real_swarm_exploration.launch  single_drone_exploration.xml  single_drone_planner.xml  single_lidar_drone.xml
src/swarm_exploration/exploration_manager/msg/: DroneState.msg  MeetingOpt.msg  MeetingOptResponse.msg  Rendezvous.msg
src/swarm_exploration/exploration_manager/src/: c2_exploration_fsm.cpp  c2_exploration_manager.cpp  exploration_node.cpp
src/swarm_exploration/path_searching/: CMakeLists.txt  package.xml
src/swarm_exploration/path_searching/include/path_searching/: astar2.h  kinodynamic_astar.h  matrix_hash.h
src/swarm_exploration/path_searching/src/: astar2.cpp  kinodynamic_astar.cpp
src/swarm_exploration/plan_env/: CMakeLists.txt
src/swarm_exploration/plan_env/include/plan_env/: comm_data.h  communication_graph.h  edt_environment.h  map_ros.h  multi_map_manager.h  obj_predictor.h  sdf_map.h
src/swarm_exploration/plan_env/msg/: ChunkData.msg  Heartbeat.msg
src/swarm_exploration/plan_env/src/: communication_graph.cpp  edt_environment.cpp  map_ros.cpp  multi_map_manager.cpp  obj_predictor.cpp  sdf_map.cpp
src/swarm_exploration/plan_manage/: CMakeLists.txt  package.xml
src/swarm_exploration/plan_manage/include/plan_manage/: plan_container.hpp  planner_manager.h
src/swarm_exploration/plan_manage/src/: planner_manager.cpp  traj_server.cpp
src/swarm_exploration/poly_traj/include/poly_traj/: polynomial_traj.h
src/swarm_exploration/poly_traj/src/: polynomial_traj.cpp
src/swarm_exploration/swarm_bridge/: CMakeLists.txt  package.xml
src/swarm_exploration/swarm_bridge/launch/: bridge_udp.launch
src/swarm_exploration/swarm_bridge/src/: bridge_node_udp.cpp
src/swarm_exploration/traj_utils/: CMakeLists.txt
src/swarm_exploration/traj_utils/include/traj_utils/: planning_visualization.h
src/swarm_exploration/traj_utils/src/: planning_visualization.cpp
src/swarm_exploration/utils/backward/: backward.hpp
src/swarm_exploration/utils/lkh_mtsp_solver/src2/: mtsp_node.cpp
static/css/: index.css
static/js/: index.js
